fixed review options

--- a/integration-tests/discovery-nacos-tests/cross-group-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-nacos-tests/cross-group-consumer/src/main/resources/bootstrap.yaml
@@ -26,7 +26,7 @@ spring:
     servicecomb:
       cross-group:
         enabled: true
-        groupServiceMapping:
+        service-group-mappings:
           price: DEFAULT_GROUP
     nacos:
       discovery:
