--- a/integration-tests/canary-serivcecomb-tests/pom.xml
+++ b/integration-tests/canary-serivcecomb-tests/pom.xml
@@ -30,6 +30,7 @@
 
   <modules>
     <module>servicecomb-canary-gateway</module>
+    <module>servicecomb-canary-consumer-gateway</module>
     <module>servicecomb-canary-consumer</module>
     <module>servicecomb-canary-provider</module>
     <module>servicecomb-canary-provider-beta</module>
