--- a/integration-tests/discovery-servicecomb-tests/gateway/src/main/resources/application.yaml
+++ b/integration-tests/discovery-servicecomb-tests/gateway/src/main/resources/application.yaml
@@ -159,6 +159,14 @@ servicecomb:
       rate: 2
       identifier: user-id
   instanceIsolation:
+    testWebClientInstanceIsolationHeader: |
+      minimumNumberOfCalls: 10
+      slidingWindowSize: 10
+      slidingWindowType: COUNT_BASED
+      failureRateThreshold: 20
+      waitDurationInOpenState: 1000
+      permittedNumberOfCallsInHalfOpenState: 10
+      order: 3
     testGatewayIsolationErrorCode: |
       minimumNumberOfCalls: 10
       slidingWindowSize: 10
@@ -171,13 +179,6 @@ servicecomb:
       forceOpen: true
       order: 1
     testWebClientInstanceIsolation: |
-      minimumNumberOfCalls: 10
-      slidingWindowSize: 10
-      slidingWindowType: COUNT_BASED
-      failureRateThreshold: 20
-      waitDurationInOpenState: 1000
-      permittedNumberOfCallsInHalfOpenState: 10
-    testWebClientInstanceIsolationHeader: |
       minimumNumberOfCalls: 10
       slidingWindowSize: 10
       slidingWindowType: COUNT_BASED
