[#1137] API security authentication support set uri whitelist

--- a/integration-tests/discovery-servicecomb-tests/account-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-servicecomb-tests/account-provider/src/main/resources/bootstrap.yaml
@@ -59,6 +59,7 @@ spring:
                 rule: order*
 
           securityPolicyEnabled: true
+          apiPathWhitelist: '/checkWhitelist'
           acls:
             app: canary
             mode: permissive
