--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -35,7 +35,7 @@
   <properties>
     <feign-core.version>12.3</feign-core.version>
     <httpclient.version>5.2.1</httpclient.version>
-    <jackson.version>2.14.2</jackson.version>
+    <jackson.version>2.16.1</jackson.version>
     <commons-io.version>2.7</commons-io.version>
     <guava.version>31.1-jre</guava.version>
     <snakeyaml.version>2.2</snakeyaml.version>
@@ -52,6 +52,14 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- put it first, otherwise it will be covered by spring-boot-dependencies -->
+      <dependency>
+        <groupId>com.fasterxml.jackson</groupId>
+        <artifactId>jackson-bom</artifactId>
+        <version>${jackson.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
       <dependency>
         <groupId>io.github.resilience4j</groupId>
         <artifactId>resilience4j-bom</artifactId>
@@ -146,20 +154,6 @@
         <groupId>org.java-websocket</groupId>
         <artifactId>Java-WebSocket</artifactId>
         <version>${websocket.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.github.resilience4j</groupId>
-        <artifactId>resilience4j-bom</artifactId>
-        <version>${resilience4j.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson</groupId>
-        <artifactId>jackson-bom</artifactId>
-        <version>${jackson.version}</version>
-        <scope>import</scope>
-        <type>pom</type>
       </dependency>
       <dependency>
         <groupId>com.github.ulisesbocchio</groupId>
