--- a/integration-tests/canary-serivcecomb-tests/servicecomb-canary-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/canary-serivcecomb-tests/servicecomb-canary-provider/src/main/resources/bootstrap.yaml
@@ -37,6 +37,9 @@ spring:
         serverType: kie
         serverAddr: http://127.0.0.1:30110
         firstPullRequired: false
+      instance:
+        properties:
+          weight: 1
 
 test:
   value:
