add WeightedRandomLoadBalancer and modify InstanceWeightLoadbalance to WeightedRoundRobinLoadBalancer

--- a/integration-tests/canary-serivcecomb-tests/servicecomb-canary-consumer/src/main/resources/application.yml
+++ b/integration-tests/canary-serivcecomb-tests/servicecomb-canary-consumer/src/main/resources/application.yml
@@ -48,4 +48,4 @@ servicecomb:
             prefix: "/testWieghtLoadBalancer"
   loadbalance:
     WieghtLoadBalancerOperation: |
-      rule: Weight
+      rule: WeightRoundRobin
