[#1203] update spring-cloud-alibaba version to 2022.0.0.0

--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -46,7 +46,7 @@
     <annotations.version>3.0.1</annotations.version>
     <dubbo.hessian.version>2.7.22</dubbo.hessian.version>
     <springdoc.version>2.1.0</springdoc.version>
-    <spring.cloud.alibaba.version>2022.0.0.0-RC2</spring.cloud.alibaba.version>
+    <spring.cloud.alibaba.version>2022.0.0.0</spring.cloud.alibaba.version>
     <resilience4j.versioin>1.7.0</resilience4j.versioin>
   </properties>
 
