--- a/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/application.yaml
@@ -111,11 +111,7 @@ servicecomb:
     testIsolationResponseHeader: |
       matches:
         - apiPath:
-            exact: "/testIsolationResponseHeader"
-    testIsolationResponseHeaderFeign: |
-      matches:
-        - apiPath:
-            exact: "/testIsolationResponseHeaderFeign"
+            prefix: "/testIsolationResponseHeader"
   rateLimiting:
     demo-rateLimiting: |
       rate: 10
@@ -158,13 +154,6 @@ servicecomb:
     isolationForceOpen: |
       forceOpen: true
     testIsolationResponseHeader: |
-      minimumNumberOfCalls: 10
-      slidingWindowSize: 10
-      slidingWindowType: COUNT_BASED
-      failureRateThreshold: 20
-      waitDurationInOpenState: 1000
-      permittedNumberOfCallsInHalfOpenState: 10
-    testIsolationResponseHeaderFeign: |
       minimumNumberOfCalls: 10
       slidingWindowSize: 10
       slidingWindowType: COUNT_BASED
