change config to common component.yaml

--- a/spring-cloud-huawei-common/src/main/resources/component.yaml
+++ b/spring-cloud-huawei-common/src/main/resources/component.yaml
@@ -18,4 +18,10 @@
 
 x-component-order: 100
 
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 1000
+        readTimeout: 30000
 
