add ping enabled switch

--- a/integration-tests/canary-serivcecomb-tests/servicecomb-canary-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/canary-serivcecomb-tests/servicecomb-canary-consumer/src/main/resources/bootstrap.yaml
@@ -27,6 +27,10 @@ spring:
       context:
         headerContextMapper:
           canary: canary
+      isolation:
+        instance:
+          ping:
+            enabled: false
       discovery:
         enabled: true
         address: http://127.0.0.1:30100
