--- a/integration-tests/discovery-nacos-tests/order-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-nacos-tests/order-consumer/src/main/resources/bootstrap.yaml
@@ -23,6 +23,11 @@ spring:
   application:
     name: order
   cloud:
+    servicecomb:
+      isolation:
+        instance:
+          ping:
+            enabled: false
     nacos:
       discovery:
         enabled: true
