--- a/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/bootstrap.yaml
@@ -24,6 +24,10 @@ spring:
     name: order
   cloud:
     servicecomb:
+      isolation:
+        instance:
+          ping:
+            enabled: false
       service:
         name: order
         version: 0.0.1
