--- a/integration-tests/canary-nacos-tests/nacos-canary-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/canary-nacos-tests/nacos-canary-consumer/src/main/resources/bootstrap.yaml
@@ -27,6 +27,10 @@ spring:
       context:
         headerContextMapper:
           canary: canary
+      isolation:
+        instance:
+          ping:
+            enabled: false
     nacos:
       discovery:
         enabled: true
