[#1240] upgrade nacos client version to 2.3.0

--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -48,6 +48,7 @@
     <springdoc.version>2.1.0</springdoc.version>
     <spring.cloud.alibaba.version>2022.0.0.0</spring.cloud.alibaba.version>
     <resilience4j.versioin>1.7.0</resilience4j.versioin>
+    <nacos.client.version>2.3.0</nacos.client.version>
   </properties>
 
   <dependencyManagement>
@@ -174,6 +175,11 @@
         <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         <version>${spring.cloud.alibaba.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba.nacos</groupId>
+        <artifactId>nacos-client</artifactId>
+        <version>${nacos.client.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
