[#1246] adjust using nacosClient to achieve nacos discovery/registry
Signed-off-by: chengyouling <spadgerlin888@163.com>

--- a/spring-cloud-huawei-bom/pom.xml
+++ b/spring-cloud-huawei-bom/pom.xml
@@ -169,7 +169,12 @@
       </dependency>
       <dependency>
         <groupId>com.huaweicloud</groupId>
-        <artifactId>spring-cloud-huawei-nacos</artifactId>
+        <artifactId>spring-cloud-huawei-nacos-discovery</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.huaweicloud</groupId>
+        <artifactId>spring-cloud-huawei-nacos-config</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
