--- a/spring-cloud-huawei-nacos/pom.xml
+++ b/spring-cloud-huawei-nacos/pom.xml
@@ -28,29 +28,10 @@
 
     <artifactId>spring-cloud-huawei-nacos</artifactId>
     <name>Spring Cloud Huawei::Nacos</name>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.huaweicloud</groupId>
-            <artifactId>spring-cloud-huawei-governance</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.huaweicloud</groupId>
-            <artifactId>spring-cloud-huawei-router</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
-    
+    <modules>
+      <module>spring-cloud-huawei-nacos-discovery</module>
+      <module>spring-cloud-huawei-nacos-config</module>
+    </modules>
 </project>
