[#1278] nacos config center support disaster recovery scenario

--- a/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-config/pom.xml
+++ b/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-config/pom.xml
@@ -30,12 +30,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.huaweicloud</groupId>
             <artifactId>spring-cloud-huawei-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
         </dependency>
     </dependencies>
     
