--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -48,6 +48,7 @@
     <springdoc.version>2.1.0</springdoc.version>
     <resilience4j.versioin>1.7.0</resilience4j.versioin>
     <nacos.client.version>2.3.0</nacos.client.version>
+    <alibaba.context.support.version>1.0.11</alibaba.context.support.version>
   </properties>
 
   <dependencyManagement>
@@ -169,6 +170,11 @@
         <groupId>com.alibaba.nacos</groupId>
         <artifactId>nacos-client</artifactId>
         <version>${nacos.client.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba.spring</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${alibaba.context.support.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
