--- a/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-config/pom.xml
+++ b/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-config/pom.xml
@@ -37,6 +37,19 @@
             <groupId>com.alibaba.nacos</groupId>
             <artifactId>nacos-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.spring</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     
 </project>
