--- a/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-discovery/pom.xml
+++ b/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-discovery/pom.xml
@@ -46,6 +46,10 @@
             <groupId>com.alibaba.nacos</groupId>
             <artifactId>nacos-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
