--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -47,8 +47,8 @@
     <annotations.version>3.0.1</annotations.version>
     <dubbo.hessian.version>2.7.23</dubbo.hessian.version>
     <springdoc.version>1.6.8</springdoc.version>
-    <spring.cloud.alibaba.version>2021.0.5.0</spring.cloud.alibaba.version>
     <nacos.client.version>2.3.0</nacos.client.version>
+    <alibaba.context.support.version>1.0.11</alibaba.context.support.version>
   </properties>
 
   <dependencyManagement>
@@ -168,14 +168,14 @@
         <version>${dubbo.hessian.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.alibaba.cloud</groupId>
-        <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        <version>${spring.cloud.alibaba.version}</version>
-      </dependency>
-      <dependency>
         <groupId>com.alibaba.nacos</groupId>
         <artifactId>nacos-client</artifactId>
         <version>${nacos.client.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba.spring</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${alibaba.context.support.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
