--- a/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-config/pom.xml
+++ b/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-config/pom.xml
@@ -46,6 +46,14 @@
       <artifactId>spring-context-support</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
       <scope>provided</scope>
