fixed NacosPropertySourceBlurLocator as singleton

--- a/integration-tests/canary-nacos-tests/nacos-canary-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/canary-nacos-tests/nacos-canary-consumer/src/main/resources/bootstrap.yaml
@@ -42,3 +42,5 @@ spring:
         enabled: true
         server-addr: http://127.0.0.1:8848
         service: ${spring.application.name}
+#        password: nacos
+#        username: nacos
