[#1450] FeignClient support setting method read/connect timeout

--- a/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/application.yaml
@@ -30,6 +30,10 @@ spring:
 
 feign:
   client:
+    method:
+      request:
+        options:
+          enabled: true
     config:
       default:
         connectTimeout: 1000
