--- a/spring-cloud-starter-huawei/pom.xml
+++ b/spring-cloud-starter-huawei/pom.xml
@@ -48,6 +48,7 @@
     <module>spring-cloud-starter-huawei-mesh</module>
     <module>spring-cloud-starter-huawei-mesh-gateway</module>
     <module>spring-cloud-starter-huawei-mesh-webflux</module>
+    <module>spring-cloud-starter-huawei-rocketmq</module>
   </modules>
 
 </project>
