[#1480] Adjusted interface timeout feature of feign to disabled by default

--- a/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/application.yaml
@@ -34,6 +34,10 @@ feign:
       default:
         connectTimeout: 1000
         readTimeout: 30000
+    method:
+      request:
+        options:
+          enabled: true
 
 servicecomb:
   matchGroup:
