--- a/integration-tests/discovery-nacos-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-nacos-tests/order-consumer/src/main/resources/application.yaml
@@ -36,6 +36,10 @@ feign:
       default:
         connectTimeout: 1000
         readTimeout: 30000
+    method:
+      request:
+        options:
+          enabled: true
 
 servicecomb:
   matchGroup:
