--- a/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-discovery/pom.xml
+++ b/spring-cloud-huawei-nacos/spring-cloud-huawei-nacos-discovery/pom.xml
@@ -50,6 +50,11 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
