[#1500] Add the spring-configuration-metadata.json file to provide automatic suggestions when set configurations in the configuration file. (#1506)

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,8 @@
             <exclude>**/**.log</exclude>
             <!-- Skip the target files -->
             <exclude>**/target/**</exclude>
+            <!-- Skip the spring-configuration-metadata files -->
+            <exculde>**/resources/META-INF/*.json</exculde>
           </excludes>
         </configuration>
       </plugin>
