--- a/spring-cloud-huawei-service-engine/service-engine-dashboard/pom.xml
+++ b/spring-cloud-huawei-service-engine/service-engine-dashboard/pom.xml
@@ -57,6 +57,12 @@
     <dependency>
       <groupId>org.apache.servicecomb</groupId>
       <artifactId>dashboard-client</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-configuration</groupId>
+          <artifactId>commons-configuration</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.github.resilience4j</groupId>
